--- a/static/css/all.css
+++ b/static/css/all.css
@@ -542,6 +542,10 @@ img {
   background-color: #fff;
 }
 
+.bg-gray-100 {
+  background-color: #f7fafc;
+}
+
 .bg-gray-600 {
   background-color: #718096;
 }
@@ -572,6 +576,14 @@ img {
 
 .bg-blue-400 {
   background-color: #63b3ed;
+}
+
+.hover\:bg-indigo-600:hover {
+  background-color: #5a67d8;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .rounded-full {
@@ -642,6 +654,10 @@ img {
   height: 4rem;
 }
 
+.h-32 {
+  height: 8rem;
+}
+
 .h-64 {
   height: 16rem;
 }
@@ -695,6 +711,16 @@ img {
   overflow: hidden;
 }
 
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -705,13 +731,18 @@ img {
   padding-right: 1rem;
 }
 
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
 .py-24 {
   padding-top: 6rem;
   padding-bottom: 6rem;
 }
 
-.pb-8 {
-  padding-bottom: 2rem;
+.pb-6 {
+  padding-bottom: 1.5rem;
 }
 
 .fixed {
@@ -745,12 +776,24 @@ img {
   stroke: currentColor;
 }
 
-.text-gray-400 {
-  color: #cbd5e0;
+.text-gray-200 {
+  color: #edf2f7;
 }
 
 .text-gray-700 {
   color: #4a5568;
+}
+
+.text-red-500 {
+  color: #f56565;
+}
+
+.text-yellow-200 {
+  color: #fefcbf;
+}
+
+.text-yellow-400 {
+  color: #f6e05e;
 }
 
 .text-yellow-500 {
@@ -769,8 +812,12 @@ img {
   color: #4299e1;
 }
 
-.hover\:text-gray-100:hover {
-  color: #f7fafc;
+.hover\:text-white:hover {
+  color: #fff;
+}
+
+.hover\:text-red-400:hover {
+  color: #fc8181;
 }
 
 .hover\:text-yellow-400:hover {
